--- a/webapp.html
+++ b/webapp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
-    <head><title>welcome to my Myapp</title>></head>
+    <head><title>welcome to my Myapp site</title>></head>
     <body>Hello World!</body>
 </html>
